# OOP_hw7

./: CMakeLists.txt  execution-result.txt
src/: hw7_task1.cpp  hw7_task2.cpp
